--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <script src="js/modernizr.js"></script>
 </head>
 
-<body>
+<body style="padding-top: 0px !important;">
 <div id="home" class="boxed-view">
   <header class="main-header clearfix">
     <!-- Header Shorcode Area -->
