--- a/index.html
+++ b/index.html
@@ -489,37 +489,19 @@
                 <a href="#">About us</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Help Center</a>
+                <a href="#">Terms and Conditions</a>
+              </li>
+              <li class="col-md-4 col-sm-4 col-xs-6">
+                <a href="questions.html">Help Center</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
                 <a href="#">Careers</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Global Sites</a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
                 <a href="#">Privacy</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Travel</a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Affiliate </a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Businesses</a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Contact Support</a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Shopping </a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Site Map</a>
-              </li>
-              <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Investor Relations</a>
+                <a href="contacts.html">Contact Support</a>
               </li>
             </ul>
           </div>
