--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 							<div class="col-md-8 col-sm-8">
 								<ul class="inline-list uppercase font-small header-meta">
 									<li><i class="icon-312 font-13x"></i> 1223 11th St NW, Washington, DC 20001</li>
-									<li><i class="icon-402 font-13x"></i> contact@duohousing.com</li>
+									<li><i class="icon-402 font-13x"></i> info@duohousing.com</li>
 								</ul>
 							</div>
 
@@ -1756,7 +1756,7 @@
 								<ul class="clean-list contact-info text-dark-blue uppercase">
 									<li><i class="icon-338 font-2x"></i> <b>Address: </b> 1223 11TH ST NW, WASHINGTON, DC 20001</li>
 									<li><i class="icon-274 font-2x"></i> <b>E-mail: </b> <a
-											href="mailto:otelia@gmail.com">contact@duohousing.com</a></li>
+											href="mailto:otelia@gmail.com">info@duohousing.com</a></li>
 									<li><i class="icon-402 font-2x"></i> <b>Phone: </b> (202) 808-2195</li>
 								</ul>
 							</div>
