update/cancel reservation forms

--- a/contacts.html
+++ b/contacts.html
@@ -166,7 +166,7 @@
               <textarea name="message" placeholder="Message"></textarea>
             </p>
             <p class="col-md-6">
-              <span class="tt-notice text-red"></span>
+              <span class="tt-notice text-blue"></span>
             </p>
             <p class="col-md-6">
               <button type="submit"
