update/cancel reservation forms

--- a/reservations.html
+++ b/reservations.html
@@ -398,7 +398,7 @@
 			submitHandler: function (form) {
 				console.log('valid');
 				$.ajax({
-					url: "//formspree.io/bozidar.dangubic@gmail.com",
+					url: "//formspree.io/info@duohousing.com",
 					method: "POST",
 					data: $(form).serialize(),
 					dataType: "json",
