terms and conditions

--- a/questions.html
+++ b/questions.html
@@ -705,7 +705,7 @@
                 <a href="#">About us</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Terms and Conditions</a>
+                <a href="terms.html">Terms and Conditions</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
                 <a href="questions.html">Help Center</a>
