--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                 <a href="#">About us</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
-                <a href="#">Terms and Conditions</a>
+                <a href="terms.html">Terms and Conditions</a>
               </li>
               <li class="col-md-4 col-sm-4 col-xs-6">
                 <a href="questions.html">Help Center</a>
