--- a/reservations.html
+++ b/reservations.html
@@ -282,7 +282,7 @@
 						</div>
 					</div>
 				</div>
-
+			</div>
 			</div> <!-- /.container -->
 	</section> <!-- /.facilities -->
 
@@ -311,7 +311,7 @@
 								<a href="#">About us</a>
 							</li>
 							<li class="col-md-4 col-sm-4 col-xs-6">
-								<a href="#">Terms and Conditions</a>
+								<a href="terms.html">Terms and Conditions</a>
 							</li>
 							<li class="col-md-4 col-sm-4 col-xs-6">
 								<a href="questions.html">Help Center</a>
