--- a/contacts.html
+++ b/contacts.html
@@ -89,6 +89,8 @@
                 </li>
                 <li><a href="questions.html">Questions</a>
                 </li>
+                <li><a href="tour.html">Tour</a>
+                </li>
                 <li class="current-menu-item"><a href="contacts.html">Contact</a></li>
               </ul>
 
