--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 </li>
                 <li><a href="questions.html">Questions</a>
                 </li>
+                <li><a href="tour.html">Tour</a>
+                </li>
                 <li><a href="contacts.html">Contact</a></li>
               </ul>
 
