--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <i class="fa fa-square-o fa-stack-2x"></i>
             <i class="fa fa-cutlery fa-stack-1x"></i>
           </span>
-          FREE Weekly Homemade BBQ<br>
+          FREE Breakfast<br>
 
           <span class="fa-stack fa-lg">
             <i class="fa fa-square-o fa-stack-2x"></i>
