virtual tour additional

--- a/tour.html
+++ b/tour.html
@@ -124,10 +124,42 @@
         </div>
       </div> <!-- /.row -->
       <div class="row">
-        <div class="col-md-offset-3 col-md-4">
+        <div class="col-md-6">
           <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1478618560557!6m8!1m7!1syrc2CuZdjwAAAAQ7Lph0Cg!2m2!1d38.90683020138059!2d-77.02658068988376!3f33!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0; margin-left: auto;margin-right: auto;" allowfullscreen></iframe>
         </div>
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351574214!6m8!1m7!1so1OqbyoSFO4AAAQ7LpW_0A!2m2!1d38.90644084446922!2d-77.0260722937!3f164!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </div> <!-- /.row -->
+      <div class="row">
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351622632!6m8!1m7!1seHwi0BUV9ZUAAAQ7LpfDkw!2m2!1d38.90681291008858!2d-77.02668874932277!3f68!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351864747!6m8!1m7!1sY2UO8c4H_kkAAAQ7LpVeEA!2m2!1d38.90646453588371!2d-77.02663855140361!3f8!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351887831!6m8!1m7!1sbnSSdvY5VWMAAAQ7LpW_zw!2m2!1d38.90680389982653!2d-77.0260532801313!3f140!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351907100!6m8!1m7!1sr_IiUlfps_sAAAQ7LpSoxA!2m2!1d38.90629525787302!2d-77.0265387668332!3f358!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351942155!6m8!1m7!1sXncnLbYxRH0AAAQ7LpPbkw!2m2!1d38.90665046227984!2d-77.02636202387794!3f81!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351959536!6m8!1m7!1sSk7uB0DP8q8AAAQ7LpPbkg!2m2!1d38.90648730245525!2d-77.02688186333762!3f86!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sus!4v1480351986797!6m8!1m7!1sTs1JXzqDjAH68LU4Ie-kRA!2m2!1d38.90647791306713!2d-77.02700228460533!3f88!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
     </div> <!-- /.container -->
   </section> <!-- /.box -->
 
