--- a/terms.html
+++ b/terms.html
@@ -143,6 +143,12 @@
         </h4>
 
         <p>
+          <b>Special Event Booking - Presidential Inauguration</b>
+          Due to high demand during the Presidential Inauguration (18th-22nd January), full payment is required at the
+          time of booking and is non-refundable. Your card will be charged  within 1 week of booking.
+        </p>
+
+        <p>
           You must pay with a credit card. We do NOT have the facility to take any cash what so ever. You will not be
           able to check in unless you are paying with a credit card.
         </p>
