--- a/terms.html
+++ b/terms.html
@@ -143,7 +143,7 @@
         </h4>
 
         <p>
-          <b>Special Event Booking - Presidential Inauguration</b>
+          <b>Special Event Booking - Presidential Inauguration</b><br/>
           Due to high demand during the Presidential Inauguration (18th-22nd January), full payment is required at the
           time of booking and is non-refundable. Your card will be charged  within 1 week of booking.
         </p>
