--- a/contacts.html
+++ b/contacts.html
@@ -71,8 +71,8 @@
         <div class="row">
           <div class="col-md-3 col-xs-8">
             <!-- Logo Area -->
-            <figure class="identity">
-              <span class="font-2x">DUO HOUSING</span>
+            <figure style="height : 50px;">
+              <img src='img/duo_h_logo.png'>
             </figure>
           </div>
           <!-- /.col-md-2 -->
