--- a/terms.html
+++ b/terms.html
@@ -71,8 +71,8 @@
         <div class="row">
           <div class="col-md-3 col-xs-8">
             <!-- Logo Area -->
-            <figure class="identity">
-              <span class="font-2x">DUO HOUSING</span>
+            <figure style="height : 50px;">
+              <img src='img/duo_h_logo.png'>
             </figure>
           </div>
           <!-- /.col-md-2 -->
@@ -141,12 +141,6 @@
         <h4 style="margin-top: 10px !important; text-transform: uppercase; font-weight: bold;">
           <u>RESERVATION CONDITIONS</u>
         </h4>
-
-        <p>
-          <b>Special Event Booking - Presidential Inauguration</b><br/>
-          Due to high demand during the Presidential Inauguration (18th-22nd January), full payment is required at the
-          time of booking and is non-refundable. Your card will be charged  within 1 week of booking.
-        </p>
 
         <p>
           You must pay with a credit card. We do NOT have the facility to take any cash what so ever. You will not be
