--- a/terms.html
+++ b/terms.html
@@ -159,8 +159,10 @@
         <p>
           No one under the age of 18 allowed. All guests in a party must be over the age of 18.
           You must give us 48 hours notice of a planned cancellation. If no notice is given the first day of your
-          reservation will be charged. Any reservation of 4 guests or more will be charged 7 days in advance for the
-          entirety of their reservation. We do not accept or acknowledge any “group” reservation, nor do we offer any
+          reservation will be charged. Any groups with 4 or more guests will be charged the entirety of their
+          reservation 30 days prior to their scheduled check in date. Within this 30 day period, any large group that
+          cancels is only eligible for half their refund up to 7 days before their arrival. Any groupo cacellation within
+          7 days will not be eligible for a refund. We do not accept or acknowledge any “group” reservation, nor do we offer any
           special pricing, discounts, or services for “groups”. There is a limit for reservations of 14 days in any
           given calendar year. If you are a resident of Washington DC, Virginia, or Maryland, you are restricted to a
           total of 1 day in any 30 day period at Duo Housing DC.
