--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,15 @@
 							</a>
 						</div>
 					</li>
-
+                                            
+					<li class='col-md-3 col-xs-6'>
+						<div class='shape-square middle-corners'>
+							<a href='img/gallery/IMG_3549-home.jpg' class='zoom-image'>
+								<img src='img/gallery/IMG_3549-home.jpg' alt='gallery item'>
+							</a>
+						</div>
+					</li>
+					
 					<li class='col-md-3 col-xs-6'>
 						<div class='shape-square middle-corners'>
 							<a href='img/gallery/8_800x600.png' class='zoom-image'>
