--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p class="uppercase letter-spacing"><b>Your Home Away from Home</b></p>
               </li>
               <li class="text-white text-center">
-                <h1 class="font-6x font-100">Visit our hotel</h1>
+                <h1 class="font-6x font-100">Visit our hostel</h1>
                 <p class="darken welcome-mess">With us you will enjoy your Vacation</p>
                 <p class="uppercase letter-spacing"><b>You are Welcome</b></p>
               </li>
