--- a/gallery.html
+++ b/gallery.html
@@ -141,6 +141,15 @@
 							</a>
 						</div>
 					</li>
+					
+					<li class='col-md-3 col-xs-6'>
+						<div class='shape-square middle-corners'>
+							<a href='img/gallery/img_9674.jpg' class='zoom-image'>
+								<img src='img/gallery/img_9677.jpg' alt='gallery item'>
+							</a>
+						</div>
+					</li>
+
 
 					<li class='col-md-3 col-xs-6'>
 						<div class='shape-square middle-corners'>
