--- a/contacts.html
+++ b/contacts.html
@@ -146,7 +146,7 @@
               <li class="col-md-4">
                 <div class="center-me">
                   <i class="icon-274 font-3x"></i>
-                  <span>CONTACT@DUOHOUSING.COM</span>
+                  <span>INFO@DUOHOUSING.COM</span>
                   <br>
                 </div>
               </li>
