--- a/index.html
+++ b/index.html
@@ -413,6 +413,16 @@
             <img src="img/number-1-271x190.jpg" class="img-responsive"/>
           </div>
         </div>
+	      
+	      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-default bootcards-media">
+            <div class="panel-heading">
+              <h3 class="panel-title">Best Hostel in USA</h3>
+            </div>
+            <img src="https://mail.google.com/mail/u/3?ui=2&ik=269fe38e20&attid=0.1&permmsgid=msg-f:1688917635996373439&th=17703da44474d1bf&view=att&disp=safe&realattid=f_kjxnkd1q0" class="img-responsive"/>
+          </div>
+        </div>
 
         <div class="col-md-4">
           <div class="panel panel-default bootcards-media">
