--- a/index.html
+++ b/index.html
@@ -414,13 +414,14 @@
           </div>
         </div>
 	      
-	      <div class="row">
         <div class="col-md-4">
           <div class="panel panel-default bootcards-media">
             <div class="panel-heading">
               <h3 class="panel-title">Best Hostel in USA</h3>
             </div>
-            <img src="https://mail.google.com/mail/u/3?ui=2&ik=269fe38e20&attid=0.1&permmsgid=msg-f:1688917635996373439&th=17703da44474d1bf&view=att&disp=safe&realattid=f_kjxnkd1q0" class="img-responsive"/>
+            </curl 'https://mail.google.com/mail/u/3?ui=2&ik=269fe38e20&attid=0.1&permmsgid=msg-f:1688917635996373439&th=17703da44474d1bf&view=fimg&realattid=f_kjxnkd1q0&disp=thd&attbid=ANGjdJ89FUianyBj7S1hcgPbQ7DdH9x5fs-yzUvhlsp-Kzkf3yAxPfKwIPZRYKt3F8e8ZnMZVpNn7ec7TkbEpNntu1PjwznVtBJS0HU5gMLK2lzTBKpECY7NI0vsD5E&ats=2524608000000&sz=w3360-h1884' \
+-X ‘null'
+
           </div>
         </div>
 
