--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Best Hostel in USA</h3>
             </div>
-            <img src="img/USA-print.jpg" class="img-responsive"/>
+            <blockquote class="imgur-embed-pub" lang="en" data-id="a/oih4AOs"  ><a href="//imgur.com/a/oih4AOs">best hostel in USA</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> 
 	  </div>
         </div>
 
