--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
             <div class="panel-heading">
               <h3 class="panel-title">Best Hostel in USA</h3>
             </div>
-            <blockquote class="imgur-embed-pub" lang="en" data-id="a/oih4AOs"  ><a href="//imgur.com/a/oih4AOs">best hostel in USA</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> 
-	  </div>
+	    <img src=[img]https://i.imgur.com/PFCS932.jpg[/img]  
+           </div>
         </div>
 
         <div class="col-md-4">
