--- a/index.html
+++ b/index.html
@@ -453,8 +453,16 @@
                 <a href="http://www.hostelbookers.com/hostels/usa/washington/65397/reviews/" target="_blank">Read All Reviews</a>
             </div>
           </div>
-       </div>
-    </div>
+		
+		<div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-default bootcards-media">
+            <div class="panel-heading">
+              <h3 class="panel-title">Best Hostel in USA</h3>
+            </div>
+            <img src="[img]https://i.imgur.com/PFCS932.jpg[/img]" class="img-responsive"/>
+          </div>
+         </div>
   </section>
 
   <footer class="main-footer" id="main-footer">
