--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Best Hostel in USA</h3>
             </div>
-            <img src=[img]https://i.imgur.com/PFCS932.jpg[/img] class="img-responsive"/>
+            <img src=https://i.imgur.com/PFCS932.jpg class="img-responsive"/>
           </div>
          </div>
   </section>
