--- a/index.html
+++ b/index.html
@@ -459,7 +459,9 @@
             <div class="panel-heading">
               <h3 class="panel-title">Best Hostel in USA</h3>
             </div>
-            <img src=https://i.imgur.com/PFCS932.jpg class="img-responsive"/>
+            <img src=[img]https://i.imgur.com/PFCS932.jpg[/img] class="img-responsive"/>
+	    <div class="panel-footer">
+	     <a href="https://imgur.com/PFCS932">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
           </div>
          </div>
   </section>
