--- a/terms.html
+++ b/terms.html
@@ -129,7 +129,7 @@
           <u>PLEASE NOTE</u>
         </h4>
         <p>
-          Taxes are not included in the rates shown online. This is an additional  14.5% as mandated by the government.
+          Taxes are not included in the rates shown online. This is an additional  15.95% as mandated by the government.
           If you have any special requests / needs, please contact us ahead of time so we can help make proper
           arrangements for you ( ie: wheelchair access, guide dogs, etc )
         </p>
@@ -143,9 +143,7 @@
         </h4>
 
         <p>
-          ***Special Event Booking -Presidential Inauguration. 
-          Due to high demand during the Presidential Inauguration (18th-22nd January), 
-          full payment is required at the time of booking and is non-refundable. Your card will be charged within 48 hours of booking.***
+         Your card will be charged within 48 hours of booking.***
           You must pay with a credit card. We do NOT have the facility to take any cash what so ever. You will not be
           able to check in unless you are paying with a credit card.
         </p>
@@ -162,10 +160,7 @@
         <p>
           No one under the age of 18 allowed. All guests in a party must be over the age of 18.
           You must give us 48 hours notice of a planned cancellation. If no notice is given the first day of your
-          reservation will be charged. Any groups with 4 or more guests will be charged the entirety of their
-          reservation 30 days prior to their scheduled check in date. Within this 30 day period, any large group that
-          cancels is only eligible for half their refund up to 7 days before their arrival. Any groupo cacellation within
-          7 days will not be eligible for a refund. We do not accept or acknowledge any “group” reservation, nor do we offer any
+          reservation will be charged.  For any groups of 4 or more, we require a 10% Deposit at the time of booking, 50% of the remaining amount is charged 90 days prior to arrival, and then the remaining 50% Is due 30 days prior to arrival. Any cancellation made within 30 days would be ineligible for a refund. We do not accept or acknowledge any “group” reservation, nor do we offer any
           special pricing, discounts, or services for “groups”. There is a limit for reservations of 14 days in any
           given calendar year. If you are a resident of Washington DC, Virginia, or Maryland, you are restricted to a
           total of 1 day in any 30 day period at Duo Housing DC.
